# Digital-Video-Compression

Project_GPU_intra+inter/: .ppm  CMakeLists.txt  README  config.txt  decoder.cpp  decoder.h  decoder_gpu.cu  intra_ele.txt  intra_modes.txt  main  main.cu  motion_vectors.txt  predict_modes.cu  predict_motion.cpp  predict_motion.h  preprocessing.cpp  preprocessing.h  residual_blocks_I.txt  test.txt  write_to_txt.cpp  write_to_txt.h
